<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterPinActivity">

    <EditText
        android:id="@+id/pinEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter 4-digit PIN"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:ems="10"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/submitPinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:layout_below="@id/pinEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

</RelativeLayout>
