...
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <!-- Notifications Header -->
    <TextView
        android:id="@+id/tvEventHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
...
        android:textSize="9sp"
        app:icon="@drawable/ic_notifications"
        app:iconGravity="top"
        app:iconTint="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/attendee_profile_button"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:text="Profile"
...
